# multi-agent-ai-rpa

./: .env.example  .gitignore  LICENSE  README.md  TODO  env.py  langgraph.json  load_env.py  main.py  pyproject.toml  run.py  test.py  test2.py  test_creation.py  test_lines.py
api/: db.sqlite3  manage.py
api/rpa_web/: settings.py
api/test_form/: models.py  urls.py
api/web_ui/: urls.py
api/web_ui/views/: __init__.py  node_view.py
reference_material/: pydantic_ai_coder.py
src/: configuration.py  data.py  rpa_graph.py  states.py
src/agents/agent1/: dependencies.py
src/agents/element_selector/: __init__.py  agent.py
src/agents/llm_models/: __init__.py  llm_models.py
src/agents/write_action_lines/: agent.py
src/browser/: __init__.py  browser.py  interact.py
src/browser/context/: __init__.py  context.py  context_config.py  state.py
src/browser/dom/: buildDomTree.js  builder.py  data_structures.py
src/nodes/: __init__.py  analyze_form_node.py  get_element_index_field.py  main_flow_manager.py  write_action_line.py  write_execution_file.py
src/tools/: __init__.py  analyze_form.py  create_execution_file.py  get_page_information.py  run_line.py
tests/: conftest.py  test_to_test.py
web/: db.sqlite3  index.html  package-lock.json  package.json
web/rpa_web/: asgi.py  urls.py  wsgi.py
web/src/: App.tsx  TurboEdge.tsx  TurboNode.tsx  main.tsx
web/src/components/: StyledNode.tsx  dashboard.tsx  graph.tsx  initialElements.tsx
web/src/styles/: flow.css  index.css
web/test_form/: admin.py  apps.py  views.py
(+8 files in other folders)
